# autotim-console

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  STRUCTURE.md
.github/workflows/: ci.yml
config/: README.md  autotim.development.example.toml  autotim.example.toml  autotim.production.example.toml  autotim.staging.example.toml  providers.example.toml  secrets.example.toml
crates/autotim/: Cargo.toml
crates/autotim-core-agent/: Cargo.toml
crates/autotim-core-agent/src/: lib.rs
crates/autotim-core-async/: Cargo.toml
crates/autotim-core-async/src/: lib.rs
crates/autotim-core-audit/: Cargo.toml
crates/autotim-core-audit/src/: lib.rs
crates/autotim-core-auth/: Cargo.toml
crates/autotim-core-auth/src/: lib.rs
crates/autotim-core-hosts/: Cargo.toml
crates/autotim-core-hosts/src/: lib.rs
crates/autotim-core-notifications/: Cargo.toml
crates/autotim-core-notifications/src/: lib.rs  provider.rs
crates/autotim-core-notifications/src/providers/: mod.rs
crates/autotim-core-rbac/: Cargo.toml
crates/autotim-core-rbac/src/: lib.rs
crates/autotim-core-registry/: Cargo.toml
crates/autotim-core-registry/src/: lib.rs
crates/autotim-core-secrets/: Cargo.toml
crates/autotim-core-secrets/src/: lib.rs
crates/autotim-core-security/: Cargo.toml
crates/autotim-core-security/src/: lib.rs
crates/autotim-core-settings/: Cargo.toml
crates/autotim-core-settings/src/: lib.rs
crates/autotim-core-tenancy/: Cargo.toml
crates/autotim-core-tenancy/src/: lib.rs
crates/autotim-core-tenancy/tests/: rls_isolation.rs
crates/autotim-infra-backup/: Cargo.toml
crates/autotim-infra-backup/src/: lib.rs
crates/autotim-infra-contracts/: Cargo.toml
crates/autotim-infra-contracts/src/: certificate.rs  dashboard.rs  dns.rs  ingress.rs  lib.rs  mail.rs  monitoring.rs  overlay_network.rs
crates/autotim-infra-dns/: Cargo.toml
crates/autotim-infra-dns/src/: lib.rs
crates/autotim-infra-mail/: Cargo.toml
crates/autotim-infra-mail/src/: lib.rs
crates/autotim-infra-monitoring/: Cargo.toml
crates/autotim-infra-monitoring/src/: lib.rs
crates/autotim-infra-network/: Cargo.toml
crates/autotim-infra-network/src/: lib.rs
crates/autotim-infra-ssl/: Cargo.toml
crates/autotim-infra-ssl/src/: lib.rs
crates/autotim-kernel/: Cargo.toml
crates/autotim-kernel/src/: config.rs  lib.rs  migrations.rs
crates/autotim-sdk/: Cargo.toml
crates/autotim-sdk/src/: error.rs  lib.rs  module.rs  ports.rs  types.rs
crates/autotim/src/: main.rs
deploy/systemd/: autotim.env.example  autotim.service.example
docs/architecture/: 00-overview-and-principles.md  10-repository-and-build.md  11-kernel.md  12-tenancy.md  13-module-system.md  14-database.md  20-security.md  21-rbac.md  22-authentication.md  23-secrets.md  24-audit.md  30-settings.md  31-async-substrate.md  32-notifications.md  40-api.md  41-agent.md  42-integration-provider-contracts.md  50-frontend-mobile-first.md  51-observability.md  60-versioning-and-upgrades.md  61-testing-strategy.md  62-development-workflow.md  INDEX.md
docs/history/: ARCHITECTURE_IMPROVEMENT_PLAN.md  ARCHITECTURE_REVIEW.md  README.md
docs/security/: public-private-boundary.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.vue  main.ts
frontend/src/router/: index.ts
frontend/src/views/: Home.vue
migrations/: README.md
migrations/_kernel/: 0001_create_modules.sql  0002_create_module_state.sql  0003_create_module_migrations.sql
migrations/core-tenancy/: 0001_create_organizations.down.sql  0001_create_organizations.sql  0002_create_users.down.sql  0002_create_users.sql  0003_enable_rls_users.down.sql  0003_enable_rls_users.sql
scripts/: adopt-tenancy-migrations.sql  check-tenant-columns.sh
