[package]
name = "autotim-core-async"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core: jobs, transactional outbox, event bus port, scheduler (doc 31)"

[dependencies]
autotim-sdk = { path = "../autotim-sdk" }
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
