[package]
name = "autotim-core-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core: tamper-evident, hash-chained audit log (doc 24)"

[dependencies]
autotim-sdk = { path = "../autotim-sdk" }
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
