[package]
name = "autotim-core-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core: authentication — local/MFA/OIDC/passkeys (doc 22)"

[dependencies]
autotim-sdk = { path = "../autotim-sdk" }
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
