[package]
name = "autotim-core-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core: envelope-encrypted secret storage, pluggable KMS (doc 23)"

[dependencies]
autotim-sdk = { path = "../autotim-sdk" }
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
