[package]
name = "autotim-core-security"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core: security policy enforcement, sessions, rate limiting (doc 20)"

[dependencies]
autotim-sdk = { path = "../autotim-sdk" }
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
