[package]
name = "autotim-core-tenancy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core: organizations, tenant context, RLS helpers (doc 12)"

[dependencies]
autotim-sdk = { path = "../autotim-sdk" }
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true