[package]
name = "autotim-core-tenancy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core: organizations, tenant context, RLS helpers (doc 12)"

[dependencies]
autotim-sdk = { path = "../autotim-sdk" }
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
# Used only by the #[ignore]'d RLS integration test below — not part
# of this crate's public API. A real PgPool wired into the kernel's
# request pipeline (doc 11 boot step 2) is a separate, later commit.
sqlx.workspace = true