[package]
name = "autotim-core-tenancy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core: organizations, tenant context, RLS helpers (doc 12)"

[dependencies]
autotim-sdk = { path = "../autotim-sdk" }
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
# Used only by the #[ignore]'d RLS integration test — not part of this
# crate's public API. The Module impl declares migrations as embedded
# &'static str SQL; it does not execute SQL itself (the kernel migration
# runner does), so sqlx is not a runtime dependency here.
sqlx.workspace = true