[package]
name = "autotim-infra-backup"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Infrastructure: Backup module (doc 00)"

[dependencies]
autotim-sdk = { path = "../autotim-sdk" }
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
