[package]
name = "autotim-infra-dns"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Infrastructure: DNS module + DnsProvider adapters (docs 00, 42)"

[dependencies]
autotim-sdk = { path = "../autotim-sdk" }
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
