[package]
name = "autotim-infra-network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Infrastructure: Network module + OverlayNetworkProvider adapters (NetBird, Tailscale, Headscale, WireGuard, OpenVPN) (doc 42)"

[dependencies]
autotim-sdk = { path = "../autotim-sdk" }
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
