[package]
name = "autotim-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Stable contract for Autotim modules: Module trait, Core service ports, shared types (doc 10, doc 13)."

[dependencies]
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true
